--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "chai": "^4.2.0",
     "mocha": "^7.1.2",
     "protractor": "^7.0.0"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
   }
 }
